# IFSCFinder

./: README.md
.github/workflows/: main.yml
clients/typescript/: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
clients/typescript/.github/workflows/: ci.yml
clients/typescript/benchmarks/: bench.ts
clients/typescript/src/: cache.ts  db.ts  index.ts  normalize.ts  search.ts  types.ts
clients/typescript/tests/: lookup.spec.ts  search.spec.ts
docs/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts  tsconfig.json
docs/.github/workflows/: deploy.yml
docs/docs/: index.md
docs/docs/api/: contracts.md  overview.md
docs/docs/api/python/: helpers.md  lookup.md  search.md
docs/docs/api/typescript/: helpers.md  lookup.md  search.md
docs/docs/architecture/: caching.md  cross-platform.md  database-schema.md  overview.md  performance.md
docs/docs/getting-started/: examples.md  installation.md  quick-start.md
docs/docs/guides/: contributing.md  development.md  release-process.md  testing.md
docs/docs/legal/: copyright.md
docs/docs/reference/: best-practices.md  data-format.md  error-handling.md
docs/src/components/: Head.tsx
docs/src/components/APICard/: index.tsx  styles.module.css
docs/src/components/HomepageFeatures/: index.tsx  styles.module.css
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
python/: .gitignore  pyproject.toml  sync_razorpay.py
python/src/ifscfinder/: __init__.py  utils.py
(+4 files in other folders)
