[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifscfinder"
version = "0.1.0"
description = "High-performance IFSC code lookup utilities backed by SQLite."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Akshat" }]
keywords = ["ifsc", "banking", "lookup", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/akshat/ifscfinder"
Repository = "https://github.com/akshat/ifscfinder"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ifscfinder = ["data/*.db"]
